# python-AI-sdk

./: CONTRIBUTING.md  README.md  RELEASE.md  pyproject.toml
docs/: installation.md
examples/: audio_file.py  buffer.py  ffmpeg.py  microphone.py  transcriptions.py
examples/nanopalabra/: README.md  nanopalabra_webrtc.py  nanopalabra_ws.py  pyproject.toml
src/palabra_ai/: __init__.py  client.py
src/palabra_ai/experimental/nano/: poc.py  poc2.py
src/palabra_ai/internal/: rest.py
tests/: test_client.py
